math-core/src/snapshots/math_core__tests__colon_last_group.snap
---
source: math-core/src/lib.rs
expression: "{x:}x"
---
<math>
    <mrow>
        <mi>x</mi>
        <mo lspace="0.2778em" rspace="0">:</mo>
    </mrow>
    <mi>x</mi>
</math>
