math-core/src/snapshots/math_core__tests__colon_sqrt.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt :"
---
<math>
    <msqrt>
        <mo>:</mo>
    </msqrt>
</math>
