math-core/src/snapshots/math_core__tests__colon_subscript.snap
---
source: math-core/src/lib.rs
expression: "x_{x:x}"
---
<math>
    <msub>
        <mi>x</mi>
        <mrow>
            <mi>x</mi>
            <mo lspace="0" rspace="0">:</mo>
            <mi>x</mi>
        </mrow>
    </msub>
</math>
