math-core/src/snapshots/math_core__tests__color.snap
---
source: math-core/src/lib.rs
expression: "{\\color{Blue}x^2}"
---
<math>
    <mrow style="color:#102694;">
        <msup>
            <mi>x</mi>
            <mn>2</mn>
        </msup>
    </mrow>
</math>
