math-core/src/snapshots/math_core__tests__complex_square_root.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt{x+2}"
---
<math>
    <msqrt>
        <mrow>
            <mi>x</mi>
            <mo>+</mo>
            <mn>2</mn>
        </mrow>
    </msqrt>
</math>
