math-core/src/snapshots/math_core__tests__complicated_operatorname.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname {{\\pi} o \\Angstrom a}"
---
<math>
    <mi>πoÅa</mi>
</math>
