math-core/src/snapshots/math_core__tests__contour_integral.snap
---
source: math-core/src/lib.rs
expression: "\\oint_C dz"
---
<math>
    <msub>
        <mo>∮</mo>
        <mi>C</mi>
    </msub>
    <mi>d</mi>
    <mi>z</mi>
</math>
