math-core/src/snapshots/math_core__tests__cube_root.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt[3]{x}"
---
<math>
    <mroot>
        <mi>x</mi>
        <mn>3</mn>
    </mroot>
</math>
