math-core/src/snapshots/math_core__tests__custom_cmd_one_arg.snap
---
source: math-core/src/lib.rs
expression: "x = \\mycmd{3}"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <msqrt>
        <mn>3</mn>
    </msqrt>
</math>
