math-core/src/snapshots/math_core__tests__custom_cmd_spacing.snap
---
source: math-core/src/lib.rs
expression: "x \\eq 3"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mn>3</mn>
</math>
