math-core/src/snapshots/math_core__tests__custom_cmd_zero_arg.snap
---
source: math-core/src/lib.rs
expression: "x = \\half"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
